--- a/shui.html
+++ b/shui.html
@@ -1,6 +1,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.7/webcomponents-loader.js"></script>
 <link rel="import" href="https://polygit.org/polymer+:2.0-preview/webcomponentsjs+:v1/shadydom+webcomponents+:master/shadycss+webcomponents+:master/custom-elements+webcomponents+:master/components/polymer/polymer-element.html">
-<link rel="import" href="https://raw.github.com/Arijit-Roy/shui-components/master/shui-checkout-css.html">
+<link rel="import" access-control-allow-origin="true" crossorigin="anonymous" href="https://raw.github.com/Arijit-Roy/shui-components/master/shui-checkout-css.html">
 <dom-module id="shui-check-box">
 
   <template>
